--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_timezone: ^1.0.4
   permission_handler: ^11.3.1
   image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
+  local_auth: ^2.2.0
+  pinput: ^4.0.0
 
 
 dev_dependencies:
