--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   cached_network_image: ^3.3.1
   local_auth: ^2.2.0
   pinput: ^4.0.0
+  mask_text_input_formatter: ^2.9.0
+  intl: ^0.19.0
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
