--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mask_text_input_formatter: ^2.9.0
   intl: ^0.19.0
   carousel_slider: ^4.2.1
+  rxdart: ^0.27.2
 
 
 dev_dependencies:
